corrected alignment

--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,11 @@
 
 /*NAVIGATION*/
 
-.hero {
-  height: 600px;
-}
 
+.header {
+  background-color: black;
+  width: 100%;
+}
 .Navbar {
   background-color: black;
   width: 100%;
@@ -52,7 +53,7 @@
 }
 .Navbar__Link {
   max-width: 1200px;
-  padding: 0 6%;
+  padding: 0 4%;
   margin-right: 25px;
 }
 
@@ -191,13 +192,7 @@
 /*INTRO*/
 
 .hero {
-  height: 600px;
-}
-
-.main-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 6%;
+  height: 480px;
 }
 
 .title1 {
@@ -317,6 +312,11 @@ padding: 10px 10px;
   padding: 0 6%;
 }
 
+@media screen and (max-width: 440px) {
+  .work .main-container {
+		padding: 0px;
+	}
+}
 
 
 .project-container {
